Add JAVA_OPTS